# BeautifulString

./: CMakeLists.txt  README.MD  README.html  beanalyzer.c  beanalyzer.h  bstring.c  bstring.h  library.c  library.h  starvalidate_match.h  strfetch.c  strfetch.h  strmatch.c  strmatch.h  strmatch_internal.c  strmatch_internal.h  strparse.c  strparse.h  strscan.c  strsearch.c  strsearch.h  strvalidate.c  strvalidate.h  strvalidate_match.c
docs/: beautifulstring_documentation.html
src/: beanalyzer.c  beanalyzer.h  bstring.c  bstring.h  library.c  library.h  stremove.c  stremove.h  strfetch.c  strfetch.h  strlearn.c  strlearn.h  strmatch.c  strmatch.h  strmatch_internal.c  strmatch_internal.h  strparse.c  strparse.h  strscan.c  strscan.h  strsearch.c  strsearch.h  strvalidate.c  strvalidate.h  strvalidate_match.c  strvalidate_match.h
unittests/: BS-contains.py  BS-join-split.py  BS-navigation.py  BS-transform-chars-tests.py  BS-unique.py  BSAdvFiltering.py  BSBenchMark.py  BSFileIOTests.py  BSFromCSVTest.py  BSJson.py  BStoCSV.py  BeautifulString_unittest.py  Fullmutability.py  beanalyzer-learn1.py  beanalyzer-learn2.py  beanalyzer_test1.py  beanalyzer_test2.py  beanalyzer_test3.py  beshowcase.py  bsmapper.py  bstring.py  csvtesting.py  strlearn-test1.py  strparse_unittests.py  strvalidate_tests.py
